--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class='container'>
         <div class='cloud_container scene2'>
                 <img src='img/logo.png' class='logo slideDown'/>
-            <div id='loader' class="spinner hide">
+            <div id='loader' class="spinner">
               <div class="spinner-container container1">
                 <div class="circle1"></div>
                 <div class="circle2"></div>
@@ -39,6 +39,7 @@
                 <h4 id='main_message'>Main Message</h4>
                 <p  id='sub_message'>Sub Message</p>
             </div>
+            <a href="http://abante.com.ph/mobile/" id="iliketomoveit1"></a>
             <div class='footer'>
                 <h3>&copy; Philimedix 2014. All Rights Reserved.</h3>
             </div>
