--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
-<html>
+<html manifest="manifest.appcache">
 <head>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
     <meta name="viewport" content="text/html" />
-    <title>Philmedix</title>
+    <title>Photobook</title>
     <script src="js/jquery-1.10.1.min.js"></script>
     <link rel="stylesheet" href="css/animations.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="background">
     </div>
     <div class='container'>
         <div class='cloud_container scene2'>
-                <img src='img/logo.png' class='logo slideDown'/>
-            <div id='loader' class="spinner">
-              <div class="spinner-container container1">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
-              </div>
-              <div class="spinner-container container2">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
-              </div>
-              <div class="spinner-container container3">
-                <div class="circle1"></div>
-                <div class="circle2"></div>
-                <div class="circle3"></div>
-                <div class="circle4"></div>
-              </div>
-            </div>
+            <img src='img/logo.png' class='logo slideDown' />
             <div id='message' class='hide'>
                 <h4 id='main_message'>Main Message</h4>
-                <p  id='sub_message'>Sub Message</p>
+                <p id='sub_message'>Sub Message</p>
             </div>
-            <a href="http://abante.com.ph/mobile/" id="iliketomoveit1"></a>
-            <div class='footer'>
-                <h3>&copy; Philimedix 2014. All Rights Reserved.</h3>
+            <div class="footer">
+            <a href="http://mobile.jakasecurities.ph/walkthrough/start.php" id="iliketomoveit1"></a>
+            <div id="floatingBarsG" class="spinner">
+                <div class="blockG" id="rotateG_01">
+                </div>
+                <div class="blockG" id="rotateG_02">
+                </div>
+                <div class="blockG" id="rotateG_03">
+                </div>
+                <div class="blockG" id="rotateG_04">
+                </div>
+                <div class="blockG" id="rotateG_05">
+                </div>
+                <div class="blockG" id="rotateG_06">
+                </div>
+                <div class="blockG" id="rotateG_07">
+                </div>
+                <div class="blockG" id="rotateG_08">
+                </div>
             </div>
+        </div>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
+
 </html>
