--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <div class="blockG" id="rotateG_08">
                 </div>
             </div>
+            <div class='footer'>
+                <h3>&copy; PhilMedix 2014. All Rights Reserved.</h3>
+            </div>
         </div>
         </div>
     </div>
