--- a/index.html
+++ b/index.html
@@ -41,13 +41,16 @@
                 </div>
             </div>
             <div class='footer'>
-                <h5>&copy; PhilMedix 2014. All Rights Reserved.</h5>
+                <h6>&copy; PhilMedix 2014. All Rights Reserved.</h6>
             </div>
         </div>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript">
+            app.initialize();
+    </script>
 </body>
 
 </html>
